# reactos

base/applications/winver/: CMakeLists.txt  osinfo.c  resource.h  winver.c  winver_exe.h
base/applications/winver/lang/: en-US.rc
dll/shellext/stobject/: csystray.cpp  csystray.h  hotplug.cpp  precomp.h
drivers/network/tcpip/: CMakeLists.txt
drivers/network/tcpip/ip/: CMakeLists.txt
drivers/network/tcpip/ip/lwip/: CMakeLists.txt
drivers/network/tcpip/ip/lwip_glue/: sys_arch.c  tcp.c
media/doc/: 3rd Party Files.txt
modules/rostests/apitests/ntdll/: NtQueryInformationProcess.c
ntoskrnl/cc/: copy.c  fs.c  pin.c  view.c
ntoskrnl/include/internal/: cc.h  mm.h  ps_i.h  tag.h
ntoskrnl/mm/: balance.c  rmap.c  section.c
ntoskrnl/mm/ARM3/: mpwriter.c
ntoskrnl/ps/: query.c
